<resources>
    <string name="app_name">AM Market</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">HOME</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_cart">cart</string>
    <string name="title_wish_list">FAVORITES</string>
    <string name="buy">SHOPPING</string>
    <string name="title_coupon">Coupon</string>
    <string name="list">List</string>
    <string name="title_stores">Stores</string>
    <string name="title_logout">Log out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide">Hide</string>
    <string name="search">Search</string>
    <string name="market">Market</string>
    <string name="your_market">YOUR SUPERMARKET</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">LOG IN</string>
    <string name="not_have_an_account_yet_register">Not have an account yet? <font color='#e43853'><b>Register</b></font></string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_log_in">Already have an account? <font color='#e43853'><b>Log in</b></font></string>
    <string name="register">REGISTER</string>

    <string name="err_msg_enter_name">Please, enter your name.</string>
    <string name="err_msg_enter_email">Please, enter your email.</string>
    <string name="err_msg_enter_cpf">Please, enter your CPF.</string>
    <string name="err_msg_enter_mobile_number">Please, enter your mobile number.</string>
    <string name="err_msg_enter_password">Please, enter password.</string>
    <string name="err_msg_enter_confirm_password">Please, confirm your password..</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password mismatch.</string>

    <string name="recover_your_password">Recover your password</string>
    <string name="recover">RECOVER</string>
    <string name="recover_successfully_msg">We sent you an email, you can change your password there!</string>
    <string name="register_success">You are registered successfully.</string>

    <string name="welcome">Welcome,</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="number_mobile">(99) 99999–9999</string>
    <string name="save">SAVE</string>
    <string name="title_address">ADDRESS</string>
    <string name="phone_number">Mobile number</string>
    <string name="cpf">CPF</string>

    <string name="please_click_back_again_to_exit">Please, click back again to exit.</string>
    <string name="thank_you_for_your_business">Thank you for your business</string>
    <string name="rv_home_title">Just today</string>
    <string name="features">Features</string>
    <string name="trending">Trending</string>

    <string name="details">Details</string>
    <string name="related_items">Related Items</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="go_to_cart">Go to Cart</string>

    <string name="title_my_cart">My Cart</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">CHECKOUT</string>
    <string name="action_cart">My Cart</string>
    <string name="get_discount">get discount on purchases over $200</string>

    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>

    <string name="title_address_list">Address List</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbl_add_address">Add Address</string>
    <string name="manage_address">Manage Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="hint_other_details">Other details</string>
    <string name="submit">SUBMIT</string>

    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>
    <string name="err_your_address_added_successfully">Your address was added successfully.</string>

    <string name="title_edit_address">Edit Address</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">You address was updated successfully.</string>

    <string name="err_your_address_deleted_successfully">Your address was deleted successfully.</string>
    <string name="title_select_address">Select Address</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="lbl_card_machine">CARD MACHINE</string>
    <string name="lbl_cash_on_delivery">CASH ON DELIVERY</string>
    <string name="hint_need_change">How Much?</string>

    <string name="user_details_fragment">My Details</string>
    <string name="my_purchases_fragment">My Orders</string>

    <string name="no_orders_placed_yet">No orders placed yet!</string>
    <string name="title_my_orders_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Address</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="search_icon">Search Icon</string>

</resources>