<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_login"
        android:title="@string/log_in"
        app:cnb_backgroundColor="@color/white"
        app:cnb_iconColor="@color/pink"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/pink_light" />

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/edit"
        android:title="@string/register"
        app:cnb_backgroundColor="@color/white"
        app:cnb_iconColor="@color/pink"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/pink_light" />

    <item
        android:id="@+id/navigation_forgot_pasword"
        android:icon="@drawable/forgot"
        android:title="@string/forgot_password"
        app:cnb_backgroundColor="@color/white"
        app:cnb_iconColor="@color/pink"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/pink_light" />

</menu>