<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.am_developer.ammarket.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.am_developer.ammarket.ui.fragment.CartFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.am_developer.ammarket.ui.fragment.FavoriteFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.am_developer.ammarket.ui.fragment.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>